Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

0.056     2013-10-15 19:27:21 America/New_York

    [ADDED]

    - Added an "=requires" collector for a REQUIREMENTS sections (handy for
      roles or things with unusual external requirements)

    [CHANGED]

    - Made Pod weaving put USAGE before attribute/method/etc. collectors

    [REMOVED]

    - Removed '=usage' Pod::Weaver collector

    [DOCS]

    - Fixed typos and improved examples

0.055     2013-10-13 15:44:51 America/New_York

    [CHANGED]

    - Switches Test::Compile to use xt_mode (and sets minimum
      prereqs to support that)

    [PREREQS]

    - Bumps Test::ReportPrereqs version to 0.008 for warnings
      on unsatisfied prereqs

    - Bumps Pod::Wordlist version to 1.10 for many stoplist
      improvements
    
0.054     2013-09-23 16:19:18 America/New_York

    [CHANGED]

    - Dropped ExtUtils::MakeMaker configure_requires in generated
      distributions to 6.17 (the version in Perl v5.8.1)

0.053     2013-09-08 10:15:25 America/New_York

    [FIXED]

    - Let GithubMeta find 'user' from repository data
      (e.g. Perl-Toolchain-Gang)

    - Fix resource generation when not using github for issues

0.052     2013-09-08 09:47:50 America/New_York

    [PREREQS]

    - Bumped Dist::Zilla to 4.300038 for fixed MetaYML
      (properly UTF-8 encodes now)

    - Bump [Test::PodSpelling] prereq for new version
      that uses Pod::Wordlist instead of Pod::Wordlist::hanekomu

    - Added Pod::Wordlist prereq for version that merges
      hanekomu words

0.051     2013-09-06 23:23:48 America/New_York

    [ADDED]

    - Added 'darkpan' attribute to trigger FakeRelease
      and dummy repo/bugtracker data

0.050     2013-09-06 17:42:59 America/New_York

    [INCOMPATIBLE CHANGE]

    - Removed support for copying README.pod and META.json from
      build directories to the root directory to reduce churn;
      instead a 'cpanfile' is generated and copied, as it